Closed Bug 1654620 Opened 5 years ago Closed 5 years ago

Crash in [@ nsTreeBodyFrame::GetSelectionRegion]

Categories

(Core :: Widget, defect)

68 Branch
x86
Windows 10
defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
thunderbird_esr78 + fixed
firefox-esr68 --- wontfix
firefox-esr78 83+ fixed
firefox80 --- wontfix
firefox81 --- wontfix
firefox82 --- fixed

People

(Reporter: wsmwk, Assigned: mkmelin)

Details

(Keywords: crash, Whiteboard: [tbird crash])

Crash Data

Attachments

(1 file)

#27 crash for Thunderbird 78.0. But not a new signature, eg 68.10.0 bp-66323361-051f-4f46-a4f1-b56550200721

bp-317ba879-1f27-43a8-baf3-24d080200721 78.0

Top 10 frames of crashing thread:

0 xul.dll nsTreeBodyFrame::GetSelectionRegion layout/xul/tree/nsTreeBodyFrame.cpp:475
1 xul.dll nsBaseDragService::InvokeDragSessionWithImage widget/nsBaseDragService.cpp:365
2 xul.dll mozilla::EventStateManager::DoDefaultDragStart dom/events/EventStateManager.cpp:2197
3 xul.dll mozilla::EventStateManager::GenerateDragGesture dom/events/EventStateManager.cpp:1975
4 xul.dll mozilla::EventStateManager::PreHandleEvent dom/events/EventStateManager.cpp:684
5 xul.dll mozilla::PresShell::EventHandler::DispatchEvent layout/base/PresShell.cpp:8037
6 xul.dll mozilla::PresShell::EventHandler::HandleEventWithCurrentEventInfo layout/base/PresShell.cpp:8006
7 xul.dll mozilla::PresShell::EventHandler::HandleEventWithTarget layout/base/PresShell.cpp:7914
8 xul.dll mozilla::PresShell::HandleEventWithTarget layout/base/PresShell.h:650
9 xul.dll static mozilla::PointerEventHandler::DispatchPointerFromMouseOrTouch dom/events/PointerEventHandler.cpp:542
Version: 78 → 68

Is this actionable?
78.2.1 bp-b634f117-3a26-4808-a839-7ea740200913

Flags: needinfo?(mkmelin+mozilla)
Flags: needinfo?(benc)
Flags: needinfo?(mkmelin+mozilla)
Flags: needinfo?(benc)
Component: General → Widget
Product: Thunderbird → Core
Version: 68 → 68 Branch
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Whiteboard: [tbird crash]
Pushed by mkmelin@iki.fi: https://hg.mozilla.org/integration/autoland/rev/b21d31971a86 fix Crash in [@ nsTreeBodyFrame::GetSelectionRegion]. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch

Does this need an ESR78 approval request?

Flags: needinfo?(mkmelin+mozilla)

Comment on attachment 9175490 [details]
Bug 1654620 - fix Crash in [@ nsTreeBodyFrame::GetSelectionRegion]. r=emilio

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Crash fix
  • User impact if declined: May crash
  • Fix Landed on Version: 82
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): One liner null check
  • String or UUID changes made by this patch: None
Flags: needinfo?(mkmelin+mozilla)
Attachment #9175490 - Flags: approval-mozilla-esr78?

Yes, thanks for reminding!

Comment on attachment 9175490 [details]
Bug 1654620 - fix Crash in [@ nsTreeBodyFrame::GetSelectionRegion]. r=emilio

Approved for 78.5esr.

Attachment #9175490 - Flags: approval-mozilla-esr78? → approval-mozilla-esr78+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: