Bug 1654620 - fix Crash in [@ nsTreeBodyFrame::GetSelectionRegion]. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D90082